Implementación de Chart.js
Se añade gráfico que muestra el número de obras de arte que la galería tiene en posesión.

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,9 @@ h1 {
     align-items: center;
     min-height: 300px;
 }
+
+#chartContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
